# nix-delegate

./: README.md  default.nix  nix-delegate.cabal  release.nix  shell.nix
app/: Main.hs
src/Nix/: Delegate.hs
